TWC3119-927: Disabled hover CSS to prevent flicker issue (#2834)

--- a/Intel.MyDeals/Client/src/app/style/common.css
+++ b/Intel.MyDeals/Client/src/app/style/common.css
@@ -183,9 +183,9 @@ kendo-datepicker.date-dashboard-search:hover, kendo-datepicker.date-dashboard-se
     box-shadow: none !important
 }
 
-.htCommentsContainer .htComments.commentHover {
+/* .htCommentsContainer .htComments.commentHover {
     left: 354px !important;
-}
+} */
 
 .added-tender .htCommentsContainer .htComments.commentHover {
     left: 54px !important;
